feat: endpoints better req and res structs for tests and docs
